--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "The simple wordchain game",
   "website": "https://github.com/silverwolfceh/wordchain",
   "repository": "https://github.com/silverwolfceh/wordchain",
-  "logo": "",
+  "logo": "https://avatars3.githubusercontent.com/u/7804860?v=3&s=460",
   "success_url": "/",
   "keywords": [
     "node",
